source/assets/css/theme.css
/* ... */
.intro {
	display:table;
	width:100%;
	height:auto;
	padding:100px 0 100px 0;
	text-align:center;
	color:#fff;
	background-image: radial-gradient(circle at 50% 50%,rgba(0,0,0,0.46),rgba(0,0,0,0.18)),url('../images/pictures/20210213160707_1.webp');
	-webkit-background-size:cover;
	-moz-background-size:cover;
	background-size:cover;
	-o-background-size:cover;
	background-position: center center;
}
.intro .intro-body {
	display:table-cell;
	vertical-align:middle;
}
@keyframes animatedBackground {
	from {
		mask-position: 0 100%;
		-webkit-mask-position: 0 100%;
	}
	to {
		mask-position: 0 0%;
		-webkit-mask-position: 0 0%;
	}
}
.intro .intro-body:after {
	content: '';
  position: absolute;
  bottom: -15px;
  left: 0;
  width: 100%;
  top:0;
  background: transparent url('../images/triangle-pattern.png');
  -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0));
	mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0));
  -webkit-mask-size: 100% 200%;
  -webkit-mask-position: 0px 0px;
  mask-size: 100% 200%;
  mask-position: 0px 0px;
  pointer-events: none;
  z-index: 1;
  animation: animatedBackground 5s linear infinite;
}
.intro .intro-body .brand-heading {
	font-size:40px;
	text-transform: lowercase;
	color: white;
}
.intro .intro-body .brand-heading:after {
  content: "";
  box-sizing: content-box;
  display: block;
  position: relative;
  top: 0px;
  left: 30px;
  height: 0px;
  border: 2px solid var(--secondary-color);
}
.intro .intro-body .intro-text {
	font-size:18px;
}
@media(min-width:768px) {
	.intro {
			height:100vh;
			padding:0;
	}
	.intro.vh-30 {
		height: 30vh;
		background-position-y: -11vh;
	}
	.intro.vh-30 .intro-body::after {
		height: 30vh;
	}
	.intro .intro-body .brand-heading {
			font-size:60px;
			margin-top:90px;
			margin-bottom:20px;
			display:inline-block;
			padding:7px 0;
	}
	.intro .intro-body .intro-text {
			font-size:20px;
				font-weight:300;
				letter-spacing:3px;
	}
}
.btn-circle {
	width:50px;
	height:50px;
	margin-top:15px;
	line-height:40px;
	text-align:center;
	border:2px solid #fff;
	border-radius: 100% !important;
	font-size: 20px;
	color:#fff;
	background:0 0;
	-webkit-transition:background .3s ease-in-out;
	-moz-transition:background .3s ease-in-out;
	transition:background .3s ease-in-out;
}
.btn-circle:hover, .btn-circle:focus {
	outline:0;
	color:#fff;
	background:rgba(255,255,255,.1);
}
.btn-circle i.animated {
	-webkit-transition-property:-webkit-transform;
	-webkit-transition-duration:1s;
	-moz-transition-property:-moz-transform;
	-moz-transition-duration:1s;
}
.btn-circle:hover i.animated {
	-webkit-animation-name:pulse;
	-moz-animation-name:pulse;
	-webkit-animation-duration:1.5s;
	-moz-animation-duration:1.5s;
	-webkit-animation-iteration-count:infinite;
	-moz-animation-iteration-count:infinite;
	-webkit-animation-timing-function:linear;
	-moz-animation-timing-function:linear;
}
@-webkit-keyframes pulse {
	0% {
			-webkit-transform:scale(1);
			transform:scale(1);
	}
	50% {
			-webkit-transform:scale(1.2);
			transform:scale(1.2);
	}
	100% {
			-webkit-transform:scale(1);
			transform:scale(1);
	}
}
@-moz-keyframes pulse {
	0% {
			-moz-transform:scale(1);
			transform:scale(1);
	}
	50% {
			-moz-transform:scale(1.2);
			transform:scale(1.2);
	}
	100% {
			-moz-transform:scale(1);
			transform:scale(1);
	}
}
.content-section {
	padding-top:40px;
	padding-bottom:40px;
	clear:both;
}
@media(min-width:767px) {
	.content-section {
			padding:150px 0;
				 clear:both;
	}
}
.btn {
	border-radius:0;
	text-transform:uppercase;
	text-decoration: none;
	font-family:Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
	font-weight:400;
	-webkit-transition:all .3s ease-in-out;
	-moz-transition:all .3s ease-in-out;
	transition:all .3s ease-in-out;
}
.btn-default {
	border:1px solid #42dca3;
	color:#42dca3;
	background-color:transparent;
}
.btn-default:hover,.btn-default:focus {
	border:1px solid #42dca3;
	outline:0;
	color:#000;
	background-color:#42dca3;
}
ul.banner-social-buttons {
	margin-top:0;
}
@media(max-width:1199px) {
	ul.banner-social-buttons {
			margin-top:15px;
	}
}
@media(max-width:767px) {
	ul.banner-social-buttons li {
			display:block;
			margin-bottom:20px;
			padding:0;
	}
	ul.banner-social-buttons li:last-child {
			margin-bottom:0;
	}
	.intro .intro-body .brand-heading {
		font-size:40px;
		margin-bottom:5px;
	}
	.intro .intro-body .intro-text {
		margin-bottom:0;
		font-size:14px;
		letter-spacing:1px;
	}
	.navbar-custom {
		background-color:#fff;
	}
	.navbar-custom a {
		color:#333;
	}
	.intro {
		padding:100px 0 50px 0;
	}
}
footer {
	padding:40px 0;
	z-index:1;
	position:relative;
	clear:both;
	background:#000;
	color: #fff;
}
footer p {
	margin:0;
	font-size:15px;
}
footer .credits {
	font-size:13px;
	letter-spacing:3px;
}
::-moz-selection {
	text-shadow:none;
	background: #00CCFF;
	color:  white;
}
::selection {
	text-shadow:none;
	background: #00CCFF;
	color:  white;
}
img::selection {
	background:0 0;
}
img::-moz-selection {
	background:0 0;
}
body {
	webkit-tap-highlight-color:rgba(255,255,255,.2);
}
.bgblue {
	background:#22292c;
}
.inlineblock {
	display:inline-block;
}
p:last-child {
	margin-bottom:0;
}
p.lead {
	line-height:1.9;
}
.btnghost {
	border:2px solid #333;
	background-color:transparent;
	padding:15px 20px;
	letter-spacing:3px;
	font-size:12px;
	text-transform:uppercase;
	font-weight:400;
	color:#333;
	margin:20px 5px 0 5px;
	display:inline-block;
   min-width: 150px;
}
.btnghost:hover {
	background-color:#333;
	color:#fff;
	border:2px solid #333;
}


.btnghost.btn-light {
	background-color: white;
}
.btnghost.btn-light:hover {
	background-color:#333;
	color:#fff;
	border:2px solid #eee;
}

.highlightlink {
	border-bottom:1px dashed #ccc;
	font-weight:400;
}
/* ... */

